elastic/network/cnp-ingress-elastic-tcp-protocol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-ingress-elastic-tcp-protocol
  namespace: default                    # Change your namespace
spec:
  description: "Allow all endpoints with the label env=elasticsearch to recieve traffic from the host that is serving the particular endpoint using TCP on port 9300"
  endpointSelector:
    matchLabels:
      app: elasticsearch                # Change your matchLabels
  ingress:
  - toPorts:
    - ports:
      - port: "9300"
        protocol: TCP
    fromEntities:
    - host
